--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -9,15 +10,9 @@
 <body>
     <h1>Indice</h1>
     <hr>
-    <ul>
-        <li>Tema 1</li>
-        <li>Tema 2</li>
-        <li>Tema 3</li>
-        <li>Tema 4</li>
-        <li>Tema 5</li>
-    </ul>
+        <a href="temas.html">Temas</a>
     <br>
-    <br>
+    <hr>
     <h1>Sitios de interes</h1>
     <ul>
         <li><a href="https://devdocs.io/">https://devdocs.io/</a></li>
