--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Indice</title>
 </head>
 <body>
+      <base target="_blank">
     <h1>Indice</h1>
     <hr>
         <a href="temas.html">Temas</a>
