--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
         <li><a href="https://markodenic.com/category/html/">https://markodenic.com/category/html/</a></li>
 
     </ul>
+    <br>
+    <h1>Documentos</h1>
+     <ul>
+        <li><a href="DevTools firefox (1).pdf">DevTools firefox/</a></li>
+        <li><a href="COMPONENTES.pdf">Componentes</a></li>
+         <li> <a href="Plantilla Hugo Parra.dotx">Plantilla Word </a></li>
+    </ul>
 </body>
 </html>
