--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
-
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indice</title>
 </head>
+
 <body>
-      <base target="_blank">
+    <base target="_blank">
     <h1>Indice</h1>
+
     <hr>
-        <a href="temas.html">Temas</a>
+
+    <a href="temas.html">Temas</a>
     <br>
     <hr>
     <h1>Sitios de interes</h1>
@@ -19,14 +22,16 @@
         <li><a href="https://devdocs.io/">https://devdocs.io/</a></li>
         <li><a href="https://markodenic.com/category/html/">https://markodenic.com/category/html/</a></li>
         <li><a href="https://material.io/resources/color/">https://material.io/resources/color/</a></li>
+        <li><a href="https://paletton.com/">https://paletton.com/</a></li>
 
     </ul>
     <br>
     <h1>Documentos</h1>
-     <ul>
+    <ul>
         <li><a href="DevTools firefox (1).pdf">DevTools firefox/</a></li>
         <li><a href="COMPONENTES.pdf">Componentes</a></li>
-         <li> <a href="Plantilla Hugo Parra.dotx">Plantilla Word </a></li>
+        <li> <a href="Plantilla Hugo Parra.dotx">Plantilla Word </a></li>
     </ul>
 </body>
+
 </html>
