--- a/temas.html
+++ b/temas.html
@@ -12,7 +12,7 @@
     <h1>TEMAS</h1>
     <hr>
     <ul>
-        <li>Tema 1</li>
+        <li><a href="tema1.html">Tema 1</a></li>
         <li>Tema 2</li>
         <li>Tema 3</li>
         <li>Tema 4</li>
