--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <base target="_blank">
-    <h1>Indice</h1>
+    <h1>Diseño</h1>
 
     <hr>
 
@@ -19,10 +19,10 @@
     <hr>
     <h1>Sitios de interes</h1>
     <ul>
-        <li><a href="https://devdocs.io/">https://devdocs.io/</a></li>
-        <li><a href="https://markodenic.com/category/html/">https://markodenic.com/category/html/</a></li>
-        <li><a href="https://material.io/resources/color/">https://material.io/resources/color/</a></li>
-        <li><a href="https://paletton.com/">https://paletton.com/</a></li>
+        <li><a href="https://devdocs.io/">Devdocs</a></li>
+        <li><a href="https://markodenic.com/category/html/">markodenic</a></li>
+        <li><a href="https://material.io/resources/color/">material</a></li>
+        <li><a href="https://paletton.com/">paletton</a></li>
 
     </ul>
     <br>
