--- a/index.html
+++ b/index.html
@@ -10,23 +10,28 @@
 
 <body>
     <base target="_blank">
-    <h1>Diseño</h1>
+    <h1 style="background-color: #7BA300;">Indice</h1>
 
     <hr>
 
     <a href="temas.html">Temas</a>
     <br>
     <hr>
-    <h1>Sitios de interes</h1>
+    <h1 style="background-color: #7BA300;">Sitios de interes</h1>
     <ul>
-        <li><a href="https://devdocs.io/">Devdocs</a></li>
-        <li><a href="https://markodenic.com/category/html/">markodenic</a></li>
-        <li><a href="https://material.io/resources/color/">material</a></li>
-        <li><a href="https://paletton.com/">paletton</a></li>
+        <li><a href="https://devdocs.io/">https://devdocs.io/</a></li>
+        <li><a href="https://markodenic.com/category/html/">https://markodenic.com/category/html/</a></li>
+        <li><a href="https://material.io/resources/color/">https://material.io/resources/color/</a></li>
+        <li><a href="https://paletton.com/">https://paletton.com/</a></li>
 
     </ul>
     <br>
-
+    <h1 style="background-color: #7BA300;">Documentos</h1>
+    <ul>
+        <li><a href="DevTools firefox (1).pdf">DevTools firefox/</a></li>
+        <li><a href="COMPONENTES.pdf">Componentes</a></li>
+        <li> <a href="Plantilla Hugo Parra.dotx">Plantilla Word </a></li>
+    </ul>
 </body>
 
 </html>
