--- a/tema1.html
+++ b/tema1.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <base target="_blank">
     <h1>Documentos</h1>
     <ul>
         <li><a href="DevTools firefox (1).pdf">DevTools firefox/</a></li>
