--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Indice</title>
 </head>
 
-<body>
+<body style="background-color: #292828; color : "white";">
     <base target="_blank">
     <h1 style="background-color: #7BA300;">Indice</h1>
 
@@ -19,10 +19,10 @@
     <hr>
     <h1 style="background-color: #7BA300;">Sitios de interes</h1>
     <ul>
-        <li><a href="https://devdocs.io/">https://devdocs.io/</a></li>
-        <li><a href="https://markodenic.com/category/html/">https://markodenic.com/category/html/</a></li>
-        <li><a href="https://material.io/resources/color/">https://material.io/resources/color/</a></li>
-        <li><a href="https://paletton.com/">https://paletton.com/</a></li>
+        <li><a href="https://devdocs.io/">devdocs</a></li>
+        <li><a href="https://markodenic.com/category/html/">markodenic</a></li>
+        <li><a href="https://material.io/resources/color/">material</a></li>
+        <li><a href="https://paletton.com/">paletton</a></li>
 
     </ul>
     <br>
