--- a/index.html
+++ b/index.html
@@ -5,28 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indice</title>
+    <style>
+        a{
+            color: white;
+        }
+    </style>
+    <title>DISEÑO</title>
 </head>
 
-<body style="background-color: #292828; color : "white";">
+<body style="background-color: #292828; color: white;">
     <base target="_blank">
-    <h1 style="background-color: #7BA300;">Indice</h1>
+    <h1 style="background-color: #7BA300; color: #292828;">Indice</h1>
 
     <hr>
 
-    <a href="temas.html">Temas</a>
+    <a href="temas.html">DISEÑO</a>
     <br>
     <hr>
-    <h1 style="background-color: #7BA300;">Sitios de interes</h1>
+    <h1 style="background-color: #7BA300;color: #292828">Sitios de interes</h1>
     <ul>
         <li><a href="https://devdocs.io/">devdocs</a></li>
         <li><a href="https://markodenic.com/category/html/">markodenic</a></li>
-        <li><a href="https://material.io/resources/color/">material</a></li>
+        <li><a href="https://material.io/resources/color/">selector de color</a></li>
         <li><a href="https://paletton.com/">paletton</a></li>
 
     </ul>
     <br>
-    <h1 style="background-color: #7BA300;">Documentos</h1>
+    <h1 style="background-color: #7BA300;color: #292828">Documentos</h1>
     <ul>
         <li><a href="DevTools firefox (1).pdf">DevTools firefox/</a></li>
         <li><a href="COMPONENTES.pdf">Componentes</a></li>
