--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 <body style="background-color: #292828; color: white;">
     <base target="_blank">
-    <h1 style="background-color: #7BA300; color: #292828;">Indice</h1>
+    <h1 style="background-color: #7BA300; color: #292828;">DISEÑO</h1>
 
     <hr>
 
-    <a href="temas.html">DISEÑO</a>
+    <a href="temas.html">Temas</a>
     <br>
     <hr>
     <h1 style="background-color: #7BA300;color: #292828">Sitios de interes</h1>
