--- a/tema1.html
+++ b/tema1.html
@@ -15,6 +15,7 @@
         <li><a href="DevTools firefox (1).pdf">DevTools firefox/</a></li>
         <li><a href="COMPONENTES.pdf">Componentes</a></li>
         <li> <a href="Plantilla Hugo Parra.dotx">Plantilla Word </a></li>
+        <li> <a href="COLORES.pfd">Colores</a></li>
     </ul>
 </body>
 
