--- a/tema1.html
+++ b/tema1.html
@@ -17,6 +17,8 @@
         <li> <a href="Plantilla Hugo Parra.dotx">Plantilla Word </a></li>
         <li> <a href="COLORES.pfd">Colores</a></li>
     </ul>
+    <h1>Practicas</h1>
+    <p><a href="colores_practica.pdf">Practica de colores</a> </p>
 </body>
 
 </html>
