--- a/tema1.html
+++ b/tema1.html
@@ -19,6 +19,7 @@
     </ul>
     <h1>Practicas</h1>
     <p><a href="colores_practica.pdf">Practica de colores</a> </p>
+    <p><a href="practicaiconos.html">Practica de iconos</a> </p>
 </body>
 
 </html>
