--- a/practicaiconos.html
+++ b/practicaiconos.html
@@ -6,63 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <style>
-        .material-icons.md-18 {
-            font-size: 48px;
-        }
-
-        /* Rules for sizing the icon. */
-        .material-icons.md-18 {
-            font-size: 18px;
-        }
-
-        .material-icons.md-24 {
-            font-size: 24px;
-        }
-
-        .material-icons.md-36 {
-            font-size: 36px;
-        }
-
-        .material-icons.md-48 {
-            font-size: 48px;
-        }
-
-        /* Rules for using icons as black on a light background. */
-        .material-icons.md-dark {
-            color: rgb(171, 255, 14);
-            background-color: rgb(24, 35, 41);
-        }
-
-        .material-icons.md-dark.md-inactive {
-            color: rgba(0, 0, 0, 0.26);
-        }
-
-        /* Rules for using icons as white on a dark background. */
-        .material-icons.md-light {
-            color: rgb(24, 35, 41);
-            background-color: rgb(171, 255, 14);
-        }
-
-        .material-icons.md-light.md-inactive {
-            color: rgba(255, 255, 255, 0.3);
-        }
-
-        body {
-            text-align: center; 
-            background-color: rgb(24, 35, 41);
-            color: white;
-        }
-        h1{
-            text-align: center;
-            color: black;
-            background-color: rgb(171, 255, 14);
-        }
-        h2{
-            text-align: center;
-            background-color: rgb(38, 51, 58);
-            color: rgb(171, 255, 14);
-        }
+     <link rel="stylesheet" href="iconos.css">
     </style>
     <title>iconos</title>
 </head>
