--- a/index.html
+++ b/index.html
@@ -5,24 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        a{
-            color: white;
-        }
+    <link rel="stylesheet" href="iconos.css">
     </style>
     <title>DISEÑO</title>
 </head>
 
-<body style="background-color: #292828; color: white;">
+<body >
     <base target="_blank">
-    <h1 style="background-color: #7BA300; color: #292828;">DISEÑO</h1>
+    <h1 >DISEÑO</h1>
 
     <hr>
 
     <a href="temas.html">Temas</a>
     <br>
     <hr>
-    <h1 style="background-color: #7BA300;color: #292828">Sitios de interes</h1>
+    <h1 >Sitios de interes</h1>
     <ul>
         <li><a href="https://devdocs.io/">devdocs</a></li>
         <li><a href="https://markodenic.com/category/html/">markodenic</a></li>
@@ -31,7 +28,7 @@
 
     </ul>
     <br>
-    <h1 style="background-color: #7BA300;color: #292828">Documentos</h1>
+    <h1 >Documentos</h1>
     <ul>
         <li><a href="DevTools firefox (1).pdf">DevTools firefox/</a></li>
         <li><a href="COMPONENTES.pdf">Componentes</a></li>
