--- a/tema1.html
+++ b/tema1.html
@@ -21,6 +21,7 @@
     <h1>Practicas</h1>
     <p><a href="colores_practica.pdf">Practica de colores</a> </p>
     <p><a href="practicaiconos.html">Practica de iconos</a> </p>
+    <p><a href="iconos_fuentes.html">Practica de iconos con fuentes</a> </p>
 </body>
 
 </html>
