--- a/tema1.html
+++ b/tema1.html
@@ -22,6 +22,7 @@
     <p><a href="colores_practica.pdf">Practica de colores</a> </p>
     <p><a href="practicaiconos.html">Practica de iconos</a> </p>
     <p><a href="iconos_fuentes.html">Practica de iconos con fuentes</a> </p>
+    <p><a href="pruebafuentes.html">Practica de fuentes</a> </p>
 </body>
 
 </html>
