--- a/pruebafuentes.html
+++ b/pruebafuentes.html
@@ -38,6 +38,9 @@
             
         </code>
     </div>
+        <h2>Resultado</h2>
+    <p>Esta es la fuente Rubik</p>
+    <h2>Y esta es la fuente Cormorant </h2>
 </body>
 
 </html>
