--- a/tema1.html
+++ b/tema1.html
@@ -27,7 +27,7 @@
     <p><a href="practicaiconos.html">Practica de iconos</a> </p>
     <p><a href="iconos_fuentes.html">Practica de iconos con fuentes</a> </p>
     <p><a href="pruebafuentes.html">Practica de fuentes</a> </p>
-    <p><a href="https://www.figma.com/file/7bT7Jo2cpeyxNk6ydEdpbd/Untitled?node-id=2%3A124">Practica de prototipado</a> </p>
+    <p><a href="https://www.figma.com/file/7bT7Jo2cpeyxNk6ydEdpbd/Untitled?node-id=2%3A124">Practica de prototipado</a>||<a href="figma.pdf">PDF</a>  </p>
 </body>
 
 </html>
