--- a/tema1.html
+++ b/tema1.html
@@ -23,11 +23,15 @@
         <li> <a href="COLORES.pfd">Colores</a></li>
     </ul>
     <h1>Practicas</h1>
-    <p><a href="colores_practica.pdf">Practica de colores</a> </p>
-    <p><a href="practicaiconos.html">Practica de iconos</a> </p>
-    <p><a href="iconos_fuentes.html">Practica de iconos con fuentes</a> </p>
-    <p><a href="pruebafuentes.html">Practica de fuentes</a> </p>
-    <p><a href="https://www.figma.com/file/7bT7Jo2cpeyxNk6ydEdpbd/Untitled?node-id=2%3A124">Practica de prototipado</a><a href="Untitled2.pdf">PDF</a>  </p>
+    <ul>
+    <li><a href="colores_practica.pdf">Practica de colores</a> </li>
+    <li><a href="practicaiconos.html">Practica de iconos</a> </li>
+    <li><a href="iconos_fuentes.html">Practica de iconos con fuentes</a> </li>
+    <li><a href="pruebafuentes.html">Practica de fuentes</a> </li>
+    <li><a href="https://www.figma.com/file/7bT7Jo2cpeyxNk6ydEdpbd/Untitled?node-id=2%3A124">Practica de prototipado</a><a href="Untitled2.pdf">PDF</a>  </li>
+        <li><a href="Guia de estilos.pdf">Practica de fuentes</a> </li>
+    </ul>
+       
 </body>
 
 </html>
