--- a/index.html
+++ b/index.html
@@ -14,23 +14,56 @@
     <title>DISEÑO</title>
 </head>
 
-<body >
-    <base target="_blank">
-    <h1 >DISEÑO</h1>
+<body>
 
-    
-
-    <a href="temas.html">Temas</a>
+    <h1>DISEÑO</h1>
+    <ul>
+        <li><a href="tema1.html">Planificacion de interfaces Gráficas</a></li>
+        <li>Tema 2</li>
+        <li>Tema 3</li>
+        <li>Tema 4</li>
+        <li>Tema 5</li>
+    </ul>
     <br>
-    
-    <h1 >Sitios de interes</h1>
+
+    <h1>Sitios de interes</h1>
     <ul>
         <li><a href="https://devdocs.io/">devdocs</a></li>
         <li><a href="https://markodenic.com/category/html/">markodenic</a></li>
         <li><a href="https://material.io/resources/color/">selector de color</a></li>
         <li><a href="https://paletton.com/">paletton</a></li>
+        <li><a href=" https://devdocs.io/">Documentacion web</a></li>
+        <li><a href="https://www.mozilla.org/es-ES/firefox/105.0a2/firstrun/">firefox developer</a></li>
+        <li><a href=" https://developer.chrome.com/docs/devtools/ ">Chrome devtools</a></li>
+        <li><a href=" https://learn.microsoft.com/es-es/microsoft-edge/devtools-guide-chromium/landing/">Microsoft
+                edge</a></li>
+        <li><a href="https://material.io/blog/">Material</a></li>
+        <li><a href="https://balsamiq.com/">Balsamiq</a></li>
+        <li><a href="https://www.figma.com/">Figma</a></li>
+        <li><a href=" http://www.jcyl.es/junta/guia/guia-estilos.html">Guia de estilos Junta Castilla y Leon</a></li>
 
+        <!-- <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li> -->
     </ul>
+        <h1>Documentacion general</h1>
+        <ul>
+            <li><a href="DevTools firefox (1).pdf">DevTools firefox/</a></li>
+            <li> <a href="Plantilla Hugo Parra.dotx">Plantilla Word </a></li>
+        </ul>
+
 
 </body>
 
