--- a/tema1.html
+++ b/tema1.html
@@ -10,28 +10,45 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Rubik:wght@300&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Tema 1</title>
 </head>
 
 <body>
     <base target="_blank">
     <h1>Documentos</h1>
+    <h2>Anatomia</h2>
     <ul>
-        <li><a href="DevTools firefox (1).pdf">DevTools firefox/</a></li>
         <li><a href="COMPONENTES.pdf">Componentes</a></li>
-        <li> <a href="Plantilla Hugo Parra.dotx">Plantilla Word </a></li>
-        <li> <a href="COLORES.pfd">Colores</a></li>
     </ul>
-    <h1>Practicas</h1>
+    <h2>Colores</h2>
     <ul>
-    <li><a href="colores_practica.pdf">Practica de colores</a> </li>
-    <li><a href="practicaiconos.html">Practica de iconos</a> </li>
-    <li><a href="iconos_fuentes.html">Practica de iconos con fuentes</a> </li>
-    <li><a href="pruebafuentes.html">Practica de fuentes</a> </li>
-    <li><a href="https://www.figma.com/file/7bT7Jo2cpeyxNk6ydEdpbd/Untitled?node-id=2%3A124">Practica de prototipado</a><a href="Untitled2.pdf">PDF</a>  </li>
+        <li> <a href="COLORES.pfd">Colores</a></li>
+        <li><a href="colores_practica.pdf">Practica de colores</a> </li>
+    </ul>
+    <h2>Iconos</h2>
+    <ul>
+        <li><a href="iconos_fuentes.html">Practica de iconos con fuentes</a> </li>
+        <li><a href="practicaiconos.html">Practica de iconos</a> </li>
+    </ul>
+    <h2>Fuentes</h2>
+    <ul>
+        <li><a href="pruebafuentes.html">Practica de fuentes</a> </li>
+    </ul>
+    <h2>Prototipos</h2>
+    <ul>
+        <li><a href="https://www.figma.com/file/7bT7Jo2cpeyxNk6ydEdpbd/Untitled?node-id=2%3A124">Practica de
+                prototipado</a> </li>
+        <li> <a href="Untitled2.pdf">PDF</a></li>
+    </ul>
+    <h2>Guias de estilos</h2>
+    <ul>
         <li><a href="Guia de estilos.pdf">Practica de fuentes</a> </li>
     </ul>
-       
+    <h3><a href="index.html" target="_self"><span class="material-symbols-outlined">
+                home
+            </span></a></h3>
 </body>
 
 </html>
