--- a/practicaiconos.html
+++ b/practicaiconos.html
@@ -40,6 +40,7 @@
     <p>Principalmente haremos dos cambios, el tamaño y el color</p>
     <div class="codigo">
     <code >
+        <pre>
         &lt;style&gt;
         <br>
             .material-icons.md-18 {
@@ -92,6 +93,7 @@
             }
             <br>
         &lt;/style&gt;
+    </pre>
     </code>
 </div>
     <p>El resultado seria el siguiente:</p>
