--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
         <li><a href="https://balsamiq.com/">Balsamiq</a></li>
         <li><a href="https://www.figma.com/">Figma</a></li>
         <li><a href=" http://www.jcyl.es/junta/guia/guia-estilos.html">Guia de estilos Junta Castilla y Leon</a></li>
-
+        <li><a href="https://materializecss.com/"></a>Materialize</li>
         <!-- <li><a href=""></a></li>
-        <li><a href=""></a></li>
         <li><a href=""></a></li>
         <li><a href=""></a></li>
         <li><a href=""></a></li>
@@ -58,11 +57,11 @@
         <li><a href=""></a></li>
         <li><a href=""></a></li> -->
     </ul>
-        <h1>Documentacion general</h1>
-        <ul>
-            <li><a href="DevTools firefox (1).pdf">DevTools firefox/</a></li>
-            <li> <a href="Plantilla Hugo Parra.dotx">Plantilla Word </a></li>
-        </ul>
+    <h1>Documentacion general</h1>
+    <ul>
+        <li><a href="DevTools firefox (1).pdf">DevTools firefox/</a></li>
+        <li> <a href="Plantilla Hugo Parra.dotx">Plantilla Word </a></li>
+    </ul>
 
 
 </body>
