--- a/tema1.html
+++ b/tema1.html
@@ -52,6 +52,10 @@
         <li><a href="./bootstrap/ejemplos/manual/index.html">Galeria</a></li>
         <li><a href="./bootstrap/ejemplos/slider/carousel/index.html">Carrusel</a></li>
     </ul>
+    <h2>Materialize</h2>
+    <ul>
+        <li><a href="./parallax-template/index.html">Clinica estetica capilar</a></li>
+    </ul>
     <h3><button><a href="index.html" target="_self"><span class="material-symbols-outlined">
                 home
             </span></a></button></h3>
