--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
     <h1>DISEÑO</h1>
     <ul>
-        <li><a href="tema1.html">Planificacion de interfaces Gráficas</a></li>
-        <li>Tema 2</li>
-        <li>Tema 3</li>
-        <li>Tema 4</li>
-        <li>Tema 5</li>
+        <h2><a href="tema1.html">Planificacion de interfaces Gráficas</a></h2>
+        <h2>Tema 2</h2>
+        <h2>Tema 3</h2>
+        <h2>Tema 4</h2>
+        <h2>Tema 5</h2>
     </ul>
     <br>
 
