--- a/tema1.html
+++ b/tema1.html
@@ -56,9 +56,14 @@
     <ul>
         <li><a href="./parallax-template/index.html">Clinica estetica capilar</a></li>
     </ul>
+    <h2>Responisve</h2>
+    <ul>
+        <li><a href="./responsive.html">Ejemplo de pagina responsive</a></li>
+        <li><a href="./diseno_responsive.pdf">Diseño responsive</a></li>
+    </ul>
     <h3><button><a href="index.html" target="_self"><span class="material-symbols-outlined">
-                home
-            </span></a></button></h3>
+                    home
+                </span></a></button></h3>
 </body>
 
 </html>
