--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>DISEÑO</h1>
     <ul>
         <h2><a href="tema1.html">Planificacion de interfaces Gráficas</a></h2>
-        <h2>Tema 2</h2>
+        <h2><a href="tema2.html">Uso de estilos</a></h2>
         <h2>Tema 3</h2>
         <h2>Tema 4</h2>
         <h2>Tema 5</h2>
