--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <ul>
         <h2><a href="tema1.html">Planificacion de interfaces Gráficas</a></h2>
         <h2><a href="tema2.html">Uso de estilos</a></h2>
-        <h2>Tema 3</h2>
+        <h2><a href="tema3.html">Multimedia</a></h2>
         <h2>Tema 4</h2>
         <h2>Tema 5</h2>
     </ul>
