--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <li><a href=" http://www.jcyl.es/junta/guia/guia-estilos.html">Guia de estilos Junta Castilla y Leon</a></li>
         <li><a href="https://materializecss.com/">Materialize</a></li>
         <li><a href="https://www.joshwcomeau.com/css/interactive-guide-to-flexbox/">Guia interactiva de flexBox</a></li>
+        <li><a href="https://hugopargon.github.io/equipogrinchribera/">Pagina para el concurso de sitios web</a></li>
         <!-- <li><a href=""></a></li>
         <li><a href=""></a></li>
         <li><a href=""></a></li>
