--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <a href="index.html" class="brand-logo">Hugo Parra</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="tema1.html">Tema 1</a></li>
-                <li><a href="Tema2.html">Tema 2</a></li>
-                <li><a href="Tema3.html">Tema 3</a></li>
+                <li><a href="tema2.html">Tema 2</a></li>
+                <li><a href="tema3.html">Tema 3</a></li>
             </ul>
         </div>
     </nav>
