--- a/tema1.html
+++ b/tema1.html
@@ -24,17 +24,20 @@
 <body class="blue-grey darken-3 white-text">
     <div class="container">
 
-        <nav>
-            <div class="nav-wrapper light-green accent-4 ">
-                <a href="index.html" class="brand-logo">Hugo Parra</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down ">
-                    <li><a href="tema1.html">Tema 1</a></li>
-                    <li><a href="tema2.html">Tema 2</a></li>
-                    <li><a href="tema3.html">Tema 3</a></li>
-                </ul>
-            </div>
-        </nav>
         
+            <nav>
+                <div class="nav-wrapper light-green accent-4">
+                    <div class="container">
+        
+                        <a href="index.html" class="brand-logo">Hugo Parra</a>
+                        <ul id="nav-mobile" class="right hide-on-med-and-down">
+                            <li><a href="tema1.html">Tema 1</a></li>
+                            <li><a href="tema2.html">Tema 2</a></li>
+                            <li><a href="tema3.html">Tema 3</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         <center>
             <h1>Documentos</h1>
         </center>
