--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
     <div class="container">
     <nav>
         <div class="nav-wrapper light-green accent-4">
-            <a href="index.html" class="brand-logo">Hugo Parra</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="tema1.html">Tema 1</a></li>
-                <li><a href="tema2.html">Tema 2</a></li>
-                <li><a href="tema3.html">Tema 3</a></li>
-            </ul>
+            <div class="container">
+
+                <a href="index.html" class="brand-logo">Hugo Parra</a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="tema1.html">Tema 1</a></li>
+                    <li><a href="tema2.html">Tema 2</a></li>
+                    <li><a href="tema3.html">Tema 3</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     <center>
