--- a/tema3.html
+++ b/tema3.html
@@ -23,14 +23,18 @@
 
 <body class="blue-grey darken-3 white-text">
     <div class="container">
-          <nav>
+
+        <nav>
             <div class="nav-wrapper light-green accent-4">
-                <a href="index.html" target="_parent" class="brand-logo">Hugo Parra</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="tema1.html">Tema 1</a></li>
-                    <li><a href="tema2.html">Tema 2</a></li>
-                    <li><a href="tema3.html">Tema 3</a></li>
-                </ul>
+                <div class="container">
+
+                    <a href="index.html" class="brand-logo">Hugo Parra</a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li><a href="tema1.html">Tema 1</a></li>
+                        <li><a href="tema2.html">Tema 2</a></li>
+                        <li><a href="tema3.html">Tema 3</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
         <center>
@@ -60,22 +64,23 @@
         </ul>
         <footer class="page-footer light-green accent-4">
             <div class="container">
-              <div class="row">
-                <div class="col l6 s12">
-                  <h5 class="white-text">Pagina de Hugo Parra</h5>
-                  <p class="grey-text text-lighten-4">Pagina creada con ambito escolar para la asignatura de Diseño de interfaces web.</p>
+                <div class="row">
+                    <div class="col l6 s12">
+                        <h5 class="white-text">Pagina de Hugo Parra</h5>
+                        <p class="grey-text text-lighten-4">Pagina creada con ambito escolar para la asignatura de
+                            Diseño de interfaces web.</p>
+                    </div>
+
                 </div>
-                
-              </div>
             </div>
             <div class="footer-copyright">
-              <div class="container">
-              © 2023 Copyright Text
-              
-              </div>
+                <div class="container">
+                    © 2023 Copyright Text
+
+                </div>
             </div>
-          </footer>
-          <script type="text/javascript" src="js/materialize.min.js"></script>
+        </footer>
+        <script type="text/javascript" src="js/materialize.min.js"></script>
 
     </div>
 
